--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@ span{
 <!-- Image and text -->
 <nav class="navbar navbar-light bg-light">
   <a class="navbar-brand" href="#">
-    <img src="/img/logo.png" width="30" height="30" class="d-inline-block align-top" alt="">
+    <img src="img/logo.png" width="30" height="30" class="d-inline-block align-top" alt="">
     Traxi - Forbes Taxis
   </a>
 </nav>
